--- a/spring-react/src/main/resources/templates/index.html
+++ b/spring-react/src/main/resources/templates/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head lang="en">
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8" />
     <title>ReactJS + Spring Data REST</title>
     <link rel="stylesheet" href="/main.css" />
 </head>
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 <body>
 
+    <div id="app"></div>
     <div id="react"></div>
-
     <script src="built/bundle.js"></script>
 
 </body>
+
 </html>
